<resources>
    <string name="app_name">DustyCV</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="settings">Settings</string>
    <string name="share_image">Share Image</string>
    <string name="resize_image">Resize Image</string>
    <string name="process_image">Process Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="grain_intensity_format">Grain Intensity: %.1f</string>
    <string name="halation_intensity_format">Halation Intensity: %.1f</string>
    <string name="halation_size_format">Halation Size: %d</string>
    <string name="bloom_intensity_format">Bloom Intensity: %.1f</string>
    <string name="bloom_size_format">Bloom Size: %d</string>
    <string name="grain_settings">Grain Settings</string>
    <string name="halation_settings">Halation Settings</string>
    <string name="bloom_settings">Bloom Settings</string>
    <string name="apply">Apply</string>
    <string name="film_type">Film Type</string>
    <string name="film_type_neutral">Neutral</string>
    <string name="film_type_kodak_50d">Kodak Vision3 50D</string>
    <string name="film_type_kodak_200t">Kodak Vision3 200T</string>
    <string name="film_type_kodak_250d">Kodak Vision3 250D</string>
    <string name="film_type_kodak_500t">Kodak Vision3 500T</string>
    <string name="film_type_description">Select film type simulation</string>
    <string name="film_info">Film Info</string>
    <string name="film_info_title">Film Stock Information</string>
    <string name="film_info_neutral">Neutral film with balanced color reproduction and standard contrast.</string>
    <string name="film_info_kodak_50d">Kodak Vision3 50D: Daylight balanced film with relatively low contrast. Best for sunny outdoor scenes during daytime. Classic western movie look with good shadow detail and gentle highlight handling.</string>
    <string name="film_info_kodak_200t">Kodak Vision3 200T: Tungsten balanced film with low contrast. Designed for studio lighting with a warm overall look. Also suitable for sunrise/sunset or indoor scenes. Excellent for dramatic cinematography.</string>
    <string name="film_info_kodak_250d">Kodak Vision3 250D: Daylight balanced film with high contrast. Ideal for cloudy weather or shade. Produces punchy images with vibrant colors. Great for scenes that need more visual impact.</string>
    <string name="film_info_kodak_500t">Kodak Vision3 500T: Tungsten balanced film with low contrast for nighttime and low-light shooting. Characteristic look with slightly cyan shadows. Commonly used for atmospheric night scenes and moody interiors.</string>
    <string name="close">Close</string>
</resources>